Update 'chatbot-sep27-1' component image to: quay.io/maysunfaisal/chatbot-sep27-1:7930c4492ce3fb22fc571579bf75e4ba5dc25676@sha256:7fa34f5d2556f9103e8ae588caa8a06a4a3fd897a27f6feac74817537ea9a0a0

--- a/components/chatbot-sep27-1/overlays/development/deployment-patch.yaml
+++ b/components/chatbot-sep27-1/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: chatbot-sep27-1
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-ai-dev/ai-template-bootstrap-app:latest # use pre-built to bootstrap 
-        name: app-inference 
+        - image: quay.io/maysunfaisal/chatbot-sep27-1:7930c4492ce3fb22fc571579bf75e4ba5dc25676@sha256:7fa34f5d2556f9103e8ae588caa8a06a4a3fd897a27f6feac74817537ea9a0a0 # use pre-built to bootstrap 
+          name: app-inference
